k8s/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: demo
spec:
  selector:
    app: web
  ports:
  - name: http
    port: 80
    targetPort: 8080
